<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeate_password">Repeate password</string>
    <string name="tony_roma_s">Tony Roma\'s</string>
    <string name="endereco_fake">Av. Lavandisca, 717 - Indianópolis, São Paulo</string>
    <string name="horario_funcionamento_restaurante">Fecha às 22:00</string>
    <string name="botao_voltar">Botao Voltar</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="salada_com_molho_gengibre">Salada com molho Gengibre</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="imgrest">Imagem Restaurante</string>
    <string name="prato_nome">Prato nome</string>
    <string name="prato_descricao">Prato descricao</string>
</resources>