<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardRestaurante"
    app:cardCornerRadius="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="14dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgRestauranteImagem"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/restaurant_image"
            android:scaleType="centerCrop"
            android:src="@drawable/image4" />

        <TextView
            android:id="@+id/tvRestauranteNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tony_roma_s"
            android:textAlignment="textStart"
            android:textColor="@color/restaurant_name_color"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRestauranteEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/endereco_fake"
            android:textColor="@color/restaurant_infs_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvRestauranteHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/horario_funcionamento_restaurante"
            android:textColor="@color/restaurant_infs_color"
            android:textSize="17sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>